[gd_scene load_steps=2 format=3 uid="uid://wfvfj2d71frr"]

[ext_resource type="Script" uid="uid://d0pgq816mb56p" path="res://scenes/blitzlesen/BlitzlesenMode.gd" id="1_huetp"]

[node name="BlitzlesenMode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_huetp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DisplayArea" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="LineContainer" type="Node2D" parent="VBoxContainer/DisplayArea"]

[node name="SymbolContainer" type="Node2D" parent="VBoxContainer/DisplayArea"]

[node name="InputArea" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
